--- a/site/styles.css
+++ b/site/styles.css
@@ -1,8 +1,10 @@
-#header-nav 
+.navbar-brand h1
 {
 	background-color: grey;
 	width: 100%;
-	height: 100px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    line-height: 0.75;
 }
 
 #header2
