--- a/site/styles.css
+++ b/site/styles.css
@@ -1,12 +1,15 @@
 .navbar-brand h1
 {
-	background-color: grey;
+   text-decoration: none;
+ }
+#header-nav
+{
+	background-color: grey
+	border-top:1px solid black ;
 	width: 100%;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    line-height: 0.75;
+	margin-bottom: 0px
+	margin-top:0px;
 }
-
 #header2
 {
 	text-align: center;
