--- a/site/styles.css
+++ b/site/styles.css
@@ -1,13 +1,10 @@
 .navbar-brand h1
 {
-   text-decoration: none;}
-
- .container{	
- 	background-color: grey
-	margin-bottom: 0px
-	margin-top:0px;
-	height: 200px
+   text-decoration: none;
+    background-color: grey;
 }
+
+
 #header2
 {
 	text-align: center;
