--- a/site/styles.css
+++ b/site/styles.css
@@ -1,7 +1,11 @@
 .navbar-brand h1
 {
    text-decoration: none;
-    background-color: grey;
+}
+#header-nav{
+	background-color: grey;
+	border-radius: 0;
+	border: 0;
 }
 
 
