--- a/site/styles.css
+++ b/site/styles.css
@@ -1,9 +1,3 @@
-body{
-	font-size: 16px;
-	color: #fff;
-	background-color: #61122f;
-	font-family: 'Oxygen', sans-serif;
-}
 
 .navbar-brand a:hover, .navbar-brand a:focus{
 	text-decoration: none;
@@ -12,10 +6,12 @@ body{
 #header-nav{
 	background-color: grey;
 	border-radius: 0;
-	border: 0;
+	border: 1px solid black;
+	height: 100px;
 }
 
 #header2
 {
 	text-align: center;
 }
+
