--- a/site/styles.css
+++ b/site/styles.css
@@ -10,7 +10,19 @@
 	height: 100px;
 	margin-bottom: 0;
 	margin-top: 0;
-	
+}
+
+.navbar-toggle{
+	position: relative;
+	float: right;
+	padding: 9px 10px;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	margin-right: 15px;
+	background-color: transparent;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 4px;
 }
 
 #header2
