--- a/site/styles.css
+++ b/site/styles.css
@@ -12,6 +12,18 @@
 	margin-top: 0;
 }
 
+.navbar-toggle{
+	position: relative;
+	float: right;
+	padding: 9px 10px;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	margin-right: 15px;
+	background-color: transparent;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 4px;
+}
 
 #header2
 {
