--- a/site/styles.css
+++ b/site/styles.css
@@ -1,12 +1,13 @@
 
 .navbar-brand a:hover, .navbar-brand a:focus{
 	text-decoration: none;
+	float: left;
 }
 
 #header-nav{
-	background-color: grey;
+	background-color: silver;
 	border-radius: 0;
-	border: 1px solid black;
+	border: 3px solid black;
 	height: 100px;
 	margin-bottom: 0;
 	margin-top: 0;
@@ -16,7 +17,7 @@
 	position: relative;
 	float: right;
 	padding: 9px 10px;
-	margin-top: 8px;
+	margin-top: 25px;
 	margin-bottom: 8px;
 	margin-right: 15px;
 	background-color: transparent;
