--- a/site/styles.css
+++ b/site/styles.css
@@ -1,8 +1,13 @@
 
 .navbar-brand a:hover, .navbar-brand a:focus{
 	text-decoration: none;
-	float: left;
-}
+	}
+
+	.navbar-brand h1
+	{
+		float: left;
+		color: #000;
+	}
 
 #header-nav{
 	background-color: silver;
@@ -17,7 +22,7 @@
 	position: relative;
 	float: right;
 	padding: 9px 10px;
-	margin-top: 25px;
+	margin-top: 35px;
 	margin-bottom: 8px;
 	margin-right: 15px;
 	background-color: transparent;
