--- a/site/styles.css
+++ b/site/styles.css
@@ -27,7 +27,7 @@
 	margin-right: 15px;
 	background-color: transparent;
 	background-image: none;
-	border: 1px solid transparent;
+	border: 1px solid blacks;
 	border-radius: 4px;
 }
 
