--- a/site/styles.css
+++ b/site/styles.css
@@ -36,3 +36,15 @@
 	text-align: center;
 }
 
+.row h1
+{
+	text-align: center;
+}
+
+.row <div
+{
+	border-size: border-box;
+	height: 1000px;
+	border: 4px solid black;
+	background-color: silver;
+}
