--- a/site/styles.css
+++ b/site/styles.css
@@ -47,7 +47,8 @@
 	height: 1000px;
 	border: 4px solid black;
 	background-color: grey;
-	width: 80%;
+	margin-left: 20px;
+	margin-right: 20px
 	margin-top: 20px;
-	padding: 10px 10px 10px 10px;
+	padding: 20px 20px 20px 20px;
 }
