--- a/site/styles.css
+++ b/site/styles.css
@@ -31,24 +31,17 @@
 	border-radius: 4px;
 }
 
-#header2
+#header1
 {
 	text-align: center;
 }
 
-.row h1
-{
-	text-align: center;
-}
 
-.col-lg-12
+.col-md-12
 {
 	border-size: border-box;
 	height: 1000px;
 	border: 4px solid black;
 	background-color: grey;
-	margin-left: 20px;
-	margin-right: 20px
-	margin-top: 20px;
-	padding-top: 20px;
+	margin:20px 20px 20px 20px;
 }
