--- a/site/styles.css
+++ b/site/styles.css
@@ -41,7 +41,8 @@
 {
 	border-size: border-box;
 	height: 1000px;
-	border: 4px solid black;
+	margin-right: 20px;
+	border: 3px solid black;
 	background-color: grey;
 	margin:20px 20px 20px 20px;
 }
