--- a/site/styles.css
+++ b/site/styles.css
@@ -56,9 +56,10 @@
 	text-align: center;
 }
 
-.visible-xs div
+#collapsable-nav div
 {
 	height: 25px;
+	border-size:border-box;
 	border: 2px solid black;
 	text-align: center;
 }
