--- a/site/styles.css
+++ b/site/styles.css
@@ -61,4 +61,7 @@
 	height: 40px;
 	border-size:border-box;
 	text-align: center;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
+	border-right: 1px solid black;
 }
