--- a/site/styles.css
+++ b/site/styles.css
@@ -61,7 +61,8 @@
 	height: 40px;
 	border-size:border-box;
 	text-align: center;
-	border-bottom: 1px solid black;
-	border-right: 1px solid black;
-	border-right: 1px solid black;
+	border-bottom: 3px solid black;
+	border-right: 3px solid black;
+	border-left: 3px solid black;
+	padding-top: 15px;
 }
