--- a/site/styles.css
+++ b/site/styles.css
@@ -61,8 +61,7 @@
 	height: 40px;
 	border-size:border-box;
 	text-align: center;
-	border-bottom: 3px solid black;
-	border-right: 3px solid black;
-	border-left: 3px solid black;
+	margin-top: -2px;
+	border:2px solid black;
 	padding-top: 15px;
 }
