--- a/site/styles.css
+++ b/site/styles.css
@@ -41,7 +41,7 @@
 	text-align: center;
 }
 
-.col-md-12 .col-sm-12 .col-xs-12
+.col-md-12 
 {
 	border-size: border-box;
 	height: 1000px;
@@ -58,10 +58,12 @@
 
 #collapsable-nav div
 {
-	height: 40px;
+	height: 50px;
 	border-size:border-box;
 	text-align: center;
 	margin-top: -3px;
 	border:3px solid black;
 	font-weight: bold;
+	padding-top: 15px;
+	font-size: 5px;
 }
