--- a/site/styles.css
+++ b/site/styles.css
@@ -36,6 +36,10 @@
 	text-align: center;
 }
 
+#header2
+{ margin-bottom: 25px;
+font-size:50px; }
+
 .row h1
 {
 	text-align: center;
@@ -65,5 +69,5 @@
 	border:3px solid black;
 	font-weight: bold;
 	padding-top: 15px;
-	font-size: 5px;
+	font-size: 20px;
 }
