--- a/site/styles.css
+++ b/site/styles.css
@@ -29,7 +29,7 @@
 	border-radius: 4px;
 }
 
-.navbar-toggle .icon-bar
+ .icon-bar
 {
 	color: black;
 }
@@ -53,7 +53,6 @@ font-size:50px; }
 	height: 1000px;
 	margin-left: 20px;
 	margin-right: 20px;
-	width: 90%;
 	background-color: grey;
 
 }
