--- a/site/styles.css
+++ b/site/styles.css
@@ -51,9 +51,10 @@ font-size:50px; }
 {
 	border-size: border-box;
 	height: 1000px;
-	margin-left: 20px;
+	margin-left: 50px;
 	margin-right: 20px;
 	background-color: grey;
+	margin:auto;
 
 }
 
