--- a/site/styles.css
+++ b/site/styles.css
@@ -51,8 +51,9 @@ font-size:50px; }
 {
 	border-size: border-box;
 	height: 1000px;
-	margin-left: 20px;
-	margin-right: 20px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 	background-color: grey;
 	padding: 20px 20px 20px 20px;
 
