--- a/site/styles.css
+++ b/site/styles.css
@@ -52,8 +52,8 @@ font-size:50px; }
 	border-size: border-box;
 	height: 1000px;
 	width: 80%;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 10%;
+	margin-right: 10%;
 	background-color: grey;
 
 }
