--- a/site/styles.css
+++ b/site/styles.css
@@ -55,17 +55,7 @@ font-size:50px; }
 	margin-left: 1%;
 	margin-right: 1%;
 	background-color: grey;
-
-}
-
-.col-xs-12 
-{
-	border-size: border-box;
-	height: 1000px;
-	width: 60%;
-	margin-left: 20%;
-	margin-right: 20%;
-	background-color: grey;
+	margin-bottom: 25px;
 
 }
 
