--- a/site/styles.css
+++ b/site/styles.css
@@ -59,15 +59,14 @@ font-size:50px; }
 
 }
 
-
-.col-xs-12 
-{
+@media only screen and (max-width: 768px){
+	.col-xs-12{
 border-size:border-box;
 overflow: scroll;
 width: 60%;
 margin-right: 20%;
 margin-left: 20%;
-}
+}}
 
 #collapsable-nav div
 {
