--- a/site/styles.css
+++ b/site/styles.css
@@ -29,7 +29,7 @@
 	border-radius: 4px;
 }
 
- .icon-bar
+ .icon-bar span
 {
 	color: black;}
 #header1
@@ -55,7 +55,7 @@ font-size:50px; }
 	margin-right: 1%;
 	background-color: grey;
 	margin-bottom: 25px;
-	overflow: scroll;
+	overflow: hidden;
 
 }
 
