--- a/site/styles.css
+++ b/site/styles.css
@@ -25,7 +25,7 @@
 	margin-right: 15px;
 	background-color: transparent;
 	background-image: none;
-	border-color:solid black;
+	border:1px solid black;
 	border-radius: 4px;
 }
 
