--- a/site/styles.css
+++ b/site/styles.css
@@ -29,10 +29,13 @@
 	border-radius: 4px;
 }
 
- .icon-bar span
-{
-	border: black;
-	color: black;}
+.navbar-toggle .icon-bar{
+	display: block;
+	border-radius: 1px solid black;
+}
+
+@media (min-width:768px)
+{.navbar-toggle{display: none;}}
 
 #header1
 {
